@@ -1,4 +1,11 @@
 ------------------------------------------------------------------------------
+  qSharp 2.0.2 [2014.06.06]
+------------------------------------------------------------------------------
+
+  - Improve performance while retrieving large data samples
+  - API: configurable maximum size of data chunk during data retrieval
+
+------------------------------------------------------------------------------
   qSharp 2.0.1 [2014.05.26]
 ------------------------------------------------------------------------------
 
@@ -11,4 +18,4 @@
   - Support for kdb+ protocol and types: v3.0, v2.6, v<=2.5
   - Synchronous and asynchronous queries
   - Convenient asynchronous callbacks mechanism
-  - Logging of the raw protocol data in case of parsing failure. 
+  - Logging of the raw protocol data in case of parsing failure
